--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
-  <div id = 'holder' class="container-lg px-5">
+  <div id='holder' class="container-lg px-5">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 
     <script src="script.js"></script>
+  </div>
 </body>
 
 </html>
